--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cicd",
   "version": "0.1.0",
+  "homepage": "https://zahermadi.github.io/CICD/",
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
