--- a/.github/workflows/build_test_react.yml
+++ b/.github/workflows/build_test_react.yml
@@ -13,3 +13,24 @@ jobs:
    build_test:
  # The type of runner that the job will run on
      runs-on: ubuntu-latest
+
+     strategy:      
+       matrix: 
+        node-version: [20.x, 21.x]
+
+     steps: 
+     #Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+
+        - uses: actions/checkout@v2
+        - name: Use actions/setup-node@v2
+   
+          with: 
+            node-version: ${{ matrix.node-version }}
+     
+        - name: npm ci, build and test
+          run: |
+           npm ci
+           npm run build --if-present
+           npm test
+
+     
