--- a/.github/workflows/build_test_react.yml
+++ b/.github/workflows/build_test_react.yml
@@ -22,8 +22,8 @@ jobs:
      #Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
 
         - uses: actions/checkout@v2
-        - name: Use actions/setup-node@v2
-   
+        - name: Use Node.js ${{ matrix.node-version }}
+          uses: actions/setup-node@v2
           with: 
             node-version: ${{ matrix.node-version }}
      
