--- a/.github/workflows/build_test_deploy_react.yml
+++ b/.github/workflows/build_test_deploy_react.yml
@@ -50,7 +50,7 @@ jobs:
       name: github-pages      
       url: ${{steps.deployment.outputs.page_url}}    
     runs-on: ubuntu-latest
-   # needs: build_test
+    needs: build_test
 
     # Grant GITHUB_TOKEN the permissions required to make a page deployment
     permissions:
