--- a/.github/workflows/build_test_deploy_react.yml
+++ b/.github/workflows/build_test_deploy_react.yml
@@ -43,6 +43,13 @@ jobs:
           # Upload entire repository          
             path: build          
             if-no-files-found: error
+
+        - name: Upload coverage reports to Codecov
+          uses: codecov/codecov-action@v5
+          with:
+            token: ${{ secrets.CODECOV_TOKEN }}
+
+
   # Deploy job  
    deploy:    
     # Deploy to the github-pages environment    
