--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "babel-jest": "^29.7.0",
     "gh-pages": "^6.3.0",
     "identity-obj-proxy": "^3.0.0",
-    "rimraf": "^6.0.1"
+    "rimraf": "^6.0.1",
+    "typescript": "4.9.5"
   }
 }
