--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "predeploy": "npm run build",
     "build-npm": "SET NODE_ENV=production && rm -rf dist && mkdir dist && npx babel src --out-dir dist --copy-files"
   },
-  
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -53,6 +52,6 @@
     "gh-pages": "^6.3.0",
     "identity-obj-proxy": "^3.0.0",
     "rimraf": "^6.0.1",
-    "typescript": "4.9.5"
+    "typescript": "^4.9.5"
   }
 }
