--- a/.github/workflows/build_test_deploy_react.yml
+++ b/.github/workflows/build_test_deploy_react.yml
@@ -49,6 +49,16 @@ jobs:
           with:
             token: ${{ secrets.CODECOV_TOKEN }}
 
+        - name: build and publish package on NPM 
+          run : |
+            git config --global user.email "zahermadi@yahoo.fr"
+            git config --global user.name "Zaher Madi"
+            npm run build-npm
+            npm version patch
+            npm publish
+
+          env:
+            NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   # Deploy job  
    deploy:    
