--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "ZaherMadicicd",
+  "name": "zahermadi-cicd-ynov-m1-dev",
   "version": "0.1.0",
   "homepage": "https://zahermadi.github.io/CICD/",
-  "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
     "r": "^0.0.5",
