--- a/.github/workflows/build_test_deploy_react.yml
+++ b/.github/workflows/build_test_deploy_react.yml
@@ -42,7 +42,7 @@ jobs:
           with:          
           # Upload entire repository          
             path: build          
-            if-no-files-found: error
+            # if-no-files-found: error
 
         - name: Upload coverage reports to Codecov
           uses: codecov/codecov-action@v5
