--- a/package.json
+++ b/package.json
@@ -45,14 +45,15 @@
     "@babel/core": "^7.26.10",
     "@babel/plugin-syntax-jsx": "^7.25.9",
     "@babel/plugin-transform-react-jsx": "^7.25.9",
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "babel-core": "^6.26.3",
     "babel-jest": "^29.7.0",
     "gh-pages": "^6.3.0",
     "identity-obj-proxy": "^3.0.0",
+    "jest-environment-jsdom": "^30.0.2",
     "rimraf": "^6.0.1",
     "typescript": "^4.9.5"
   }
