--- a/.github/workflows/build_test_deploy_react.yml
+++ b/.github/workflows/build_test_deploy_react.yml
@@ -31,7 +31,7 @@ jobs:
           run: |
            npm ci
            npm run build --if-present
-           npm test
+          #  npm test
 
         - name: Setup Pages
           id: pages        
