--- a/package.json
+++ b/package.json
@@ -56,5 +56,10 @@
     "jest-environment-jsdom": "^30.0.2",
     "rimraf": "^6.0.1",
     "typescript": "^4.9.5"
+  },
+    "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!axios)/"
+    ]
   }
 }
